--- a/vignettes/practical4.Rmd
+++ b/vignettes/practical4.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Practical 1"
+title: "Practical 4"
 author: "Jumping Rivers"
 output: rmarkdown::pdf_document
 vignette: >
-  %\VignetteIndexEntry{practical1_new}
+  %\VignetteIndexEntry{practical4}
   \usepackage[utf8]{inputenc}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -14,6 +14,6 @@ editor_options:
 knitr::opts_chunk$set(echo = FALSE, results = "hide", fig.keep = "none")
 ```
 
-```{r, child = 'practical1_content.Rmd'}
+```{r, child = 'practical4_content.Rmd'}
 ```
 
