--- a/vignettes/solutions3.Rmd
+++ b/vignettes/solutions3.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Practical 3"
+title: "Practical 3 Solutions"
 author: "Jumping Rivers"
 output: rmarkdown::pdf_document
 vignette: >
-  %\VignetteIndexEntry{practical3_new}
+  %\VignetteIndexEntry{solutions3}
   \usepackage[utf8]{inputenc}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -11,7 +11,7 @@ editor_options:
 ---
 
 ```{r, setup, echo = FALSE}
-knitr::opts_chunk$set(echo = FALSE, results = "hide", fig.keep = "none")
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r, child = 'practical3_content.Rmd'}
