--- a/vignettes/solutions4.Rmd
+++ b/vignettes/solutions4.Rmd
@@ -1,9 +1,9 @@
 ---
-title: "Practical 2"
+title: "Practical 4 Solutions"
 author: "Jumping Rivers"
 output: rmarkdown::pdf_document
 vignette: >
-  %\VignetteIndexEntry{practical2_new}
+  %\VignetteIndexEntry{solutions4}
   \usepackage[utf8]{inputenc}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -11,9 +11,9 @@ editor_options:
 ---
 
 ```{r, setup, echo = FALSE}
-knitr::opts_chunk$set(echo = FALSE, results = "hide", fig.keep = "none")
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, child = 'practical2_content.Rmd'}
+```{r, child = 'practical4_content.Rmd'}
 ```
 
