--- a/vignettes/practical1.Rmd
+++ b/vignettes/practical1.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Practical 1"
 author: "Jumping Rivers"
-output: rmarkdown::pdf_document
+output: 
+  tufte::tufte_handout:
+    latex_engine: xelatex
 vignette: >
   %\VignetteIndexEntry{practical1}
   \usepackage[utf8]{inputenc}
