--- a/vignettes/solutions2.Rmd
+++ b/vignettes/solutions2.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Practical 2 Solutions"
 author: "Jumping Rivers"
-output: rmarkdown::pdf_document
+output: 
+  tufte::tufte_handout:
+    latex_engine: xelatex
 vignette: >
   %\VignetteIndexEntry{solutions2}
   \usepackage[utf8]{inputenc}
