--- a/vignettes/solutions3.Rmd
+++ b/vignettes/solutions3.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Practical 3 Solutions"
 author: "Jumping Rivers"
-output: rmarkdown::pdf_document
+output: 
+  tufte::tufte_handout:
+    latex_engine: xelatex
 vignette: >
   %\VignetteIndexEntry{solutions3}
   \usepackage[utf8]{inputenc}
